<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/magnitude_dialog_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_an_option_dialog_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white" />

        </android.support.v7.widget.Toolbar>

        <RadioGroup
            android:id="@+id/magnitude_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/magnitude_dialog_toolbar">

            <RadioButton
                android:id="@+id/ascCategoryRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/magnitude_asc_category"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/descCategoryRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:text="@string/magnitude_desc_category"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/specificValueCategoryRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:text="@string/magnitude_range_category"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rangeCategoryRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:text="@string/magnitude_range_category"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/intensityRangeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/magnitude_radio_group"
            app:mrb_pinColor="@color/range_bar_pin_color"
            app:mrb_pinMaxFont="20sp"
            app:mrb_pinRadius="17dp"
            app:mrb_pinTextColor="@color/white"
            app:mrb_selectorSize="10dp"
            app:mrb_tickEnd="10"
            app:mrb_tickInterval=".1"
            app:mrb_tickStart=".1" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>